fixed background width issue on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@ p {
 .background-image {
 	position: relative;
 	top: -3.2em;
+	width: 100vw;
 }
 
 @media (min-width: 900px) {
@@ -409,7 +410,7 @@ ACTION CALL
 	background-color: var(--dark-desaturated-blue);
 	color: var(--pale-blue);
 	cursor: pointer;
-	padding: 1em 3.5em;
+	padding: 1em 3.3em;
 	margin-top: 1.5em;
 	margin-bottom: .75em;
 }
